# pico-midi

./: CMakeLists.txt  README.md  bb.edn  lcd.h  lcd.hpp  main.cpp
